<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hosts Manager</string>
    <string name="editKey">Edit</string>
    <string name="newKey">Add new host</string>
    <string name="deleteKey">Delete</string>
    <string name="cancelKey">Cancel</string>
    <string name="confirmKey">Confirm</string>
    <string name="hostnameKey">Host Name</string>
    <string name="ipAddressKey">IP Address</string>
    <string name="okKey">Ok</string>
    <string name="cancelKey">Cancel</string>
    <string name="confirmKey">Confirm</string>
    <string name="notRootMsgKey">Impossible to edit your hosts. You are not a root user</string>
    <string name="errorKey">Error</string>
    <string name="confirmDeleteMsg">Are you sure you want to delete the selected hosts ?</string>
    <string name="invalidHostKey">The entered host is invalid</string>
    <string name="invalidIPKey">The entered IP is invalid</string>
    <string name="resetKey">Reset</string>
    <string name="resetMsgKey">Are you sure you want to reset the hosts to default ?</string>
</resources>