<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipAddressKey" />

    <EditText
        android:id="@+id/etIp"
        style="@style/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hostnameKey" />

    <EditText
        android:id="@+id/etHost"
        style="@style/editText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCancel"
            style="@style/btnStyle"
            android:text="@string/cancelKey" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/btnStyle"
            android:text="@string/confirmKey" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/btnStyle"
            android:text="@string/deleteKey" />
    </LinearLayout>

</LinearLayout>